Implementando modos de buscar clientes
